--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 
+:root {
+    --body-bg-color: #1a1c1d;
+    --text-color: #aaaebc;
+    --hr-color: #26292a;
+    --red: #e74c3c;
+    font-family: 'Ubuntu', sans-serif;
+  }
+  
 header{
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     margin-top: -12px;
     margin-left: -12px;
     margin-right: -12px;
-    
     padding: 10px;
-    background: #064635;
-    font-family: 'Ubuntu', sans-serif;
+    background: #406882;
+    
     color:#F5EEDC;
 }
 body{
@@ -17,16 +26,77 @@ body{
 }
 
 #logobuap{
-    width: 5%;
-    height: 5%;
+    max-width: 75px;
+    max-height: 75px;
 }
 
-#listaheader li{    
-    padding: 25px;
-    float:right;
+#listaheader{
+    display: flex;
+    align-items: center;
+}
+
+#listaheader li{   
+    font-size: large;
+    padding-right:40px;
+    padding-left: 40px;
+    float:left;
     display: inline;
 }
+
+#listaheader a {
+    position: relative;
+    display: block;
+    padding: 5px;
+  }
+  
+  #listaheader a::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(to right, #F3C892, #FFF1BD, #A3DA8D);
+    z-index: 1;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  #listaheader a:hover::before {
+    transform: scaleX(1);
+  }
+
+#nombre{
+    display: flex;
+    align-items: center;
+}
 h1{
-   margin-left: 15px;
+    margin-left: 20px;
    margin-right: 50px;
+}
+
+  ul {
+    list-style: none;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  hr {
+    border-color: var(--hr-color);
+    margin: 20px 0;
+  }
+  
+  
+#textInt{
+    margin-top: 25px;
+    margin-left:50px;
+    margin-right:50px;
+    border: 3px;
+    border-style: solid;
+    border-color:#6998AB;
+    background-color: #B1D0E0;
 }
