--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 :root {
     --body-bg-color: #1a1c1d;
@@ -18,7 +18,6 @@ header{
     margin-right: -12px;
     padding: 10px;
     background: #406882;
-    
     color:#F5EEDC;
 }
 body{
@@ -91,12 +90,30 @@ h1{
   }
   
   
-#textInt{
+.rectext{
     margin-top: 25px;
     margin-left:50px;
     margin-right:50px;
-    border: 3px;
+    margin-bottom: 500px;
+    border: 5px;
     border-style: solid;
     border-color:#6998AB;
+    border-radius: 12px;
     background-color: #B1D0E0;
+}
+
+.textInt{
+  margin: 12px;
+  font-size: large;
+  margin-bottom: 0px;
+}
+
+#imgfcc{
+  max-width: 1000px;
+  max-height: 100px;
+  text-align: center;
+}
+
+#Equipo{
+  color: #1a1c1d;
 }
